--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./mail.js"></script>
+    <!-- <script src="./mail.js"></script> -->
+    <script src="./dadi.js"></script>
   </body>
 </html>
