aggiunto commenti switch all'index x file js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- scommentare se si vuole usare la mail -->
     <!-- <script src="./mail.js"></script> -->
+
+    <!-- scommentare se si vogliono usare i dadi -->
     <script src="./dadi.js"></script>
   </body>
 </html>
